# dotfiles

./: .bashrc  .dir-locals.el  .gitignore  .gitmodules  .stalonetrayrc  README.md  picom.conf
.config/: topgrade.toml
.config/i3/: config
.config/rofi/: config.rasi
.xmonad/: ColorScheme.hs  PLASMASTUFF  README.org  XFKeys.hs  hie.yaml  hie.yaml.back  mo.hs  package.yaml  stack.yaml  xmobar_bottom.hs  xmobar_top.hs  xmonad-private.cabal  xmonad.hs
.xmonad/app/: xmobar_bottom.hs  xmobar_secondary.hs  xmobar_top.hs
.xmonad/src/: ColorScheme.hs  Config.hs
.xmonad/xpm/: battery_idle_2.xpm  battery_idle_3.xpm  battery_idle_4.xpm  battery_idle_5.xpm  battery_off_1.xpm  battery_on_0.xpm  battery_on_1.xpm  battery_on_2.xpm  battery_on_3.xpm  battery_on_7.xpm  battery_on_8.xpm  circle_left.xpm  cpu_0.xpm  cpu_1.xpm  cpu_4.xpm  cpu_6.xpm  haskell_20.xpm  left.xpm  ram_0.xpm  ram_5.xpm  ram_6.xpm  seperator.xpm
X/: .xsession
alacritty/.config/: alacritty.toml  alacritty.yml
bashrc/: .bashrc
doom-emacs/.doom.d/: .gitignore  README.md  config.el  config.org  (+3 more)
picom/: picom.conf
stalonetray/: .stalonetrayrc
xmobar/xmobarrc/: README.md  hie.yaml  package.yaml  stack.yaml  xmobarrc.cabal  xmobarrc.hs
xmobar/xmobarrc/xpm/: battery_idle_0.xpm  battery_idle_1.xpm  battery_idle_6.xpm  battery_idle_8.xpm  battery_off_2.xpm  battery_off_3.xpm  battery_off_4.xpm  battery_off_5.xpm  battery_off_6.xpm  battery_off_7.xpm  battery_off_8.xpm  battery_on_4.xpm  battery_on_5.xpm  circle_right.xpm  cpu_2.xpm  cpu_3.xpm  cpu_5.xpm  haskell.xpm  ram_2.xpm  ram_7.xpm
zsh/: .zshrc
(+76 files in other folders)
