cabal-version:      3.0
name:               xmobarrc
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE
author:             Yecine Megdiche
maintainer:         yecine.megdiche@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable xmobar
    import:           warnings
    main-is:          xmobarrc.hs
    build-depends:    base ^>=4.18.3.0
                    , xmobar == 0.50
    hs-source-dirs:   .
    default-language: Haskell2010
